<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/textView3"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nombre"
        android:ems="10"
        android:layout_marginRight="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="27dp"
        android:id="@+id/editTextNombre"
        android:layout_below="@+id/textView3"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/textView4"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        android:layout_below="@+id/editTextNombre"
        android:layout_alignLeft="@+id/editTextNombre"
        android:layout_alignStart="@+id/editTextNombre" />

    <TextView
        android:text="@string/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <TextView
        android:text="@string/tipo_letra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonGuardar"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginBottom="43dp"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark" />

    <Spinner
        android:entries="@array/letra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerLetras"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginLeft="180dp"
        />

    <Button
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonGuardar"
        android:layout_marginBottom="73dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editTextNombre"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView">

        <RadioButton
            android:text="@string/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonA2"
            android:layout_alignBaseline="@+id/radioButtonA1"
            android:layout_alignBottom="@+id/radioButtonA1"
            android:layout_toRightOf="@+id/radioButtonA1"
            android:layout_toEndOf="@+id/radioButtonA1"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButtonA1"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_weight="1" />
    </RadioGroup>

    <Spinner
        android:entries="@array/color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerColor"
        android:layout_marginLeft="70dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/buttonGuardar"
        android:layout_alignStart="@+id/buttonGuardar" />

</RelativeLayout>