<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alumnedam.activitat3m8uf1.MainActivity">

    <TextView
        android:text="@string/horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textViewTitulo"
        android:textSize="24sp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewProfesor"
        android:layout_alignRight="@+id/textViewTitulo"
        android:layout_alignEnd="@+id/textViewTitulo"
        android:layout_marginRight="55dp"

        android:id="@+id/textViewResProfesor" />

    <TextView
        android:text="@string/modulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewProfesor"
        android:layout_alignLeft="@+id/textViewProfesor"
        android:layout_alignStart="@+id/textViewProfesor"
        android:layout_marginTop="76dp"
        android:id="@+id/textViewModulo"
        android:textSize="18sp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/textViewModulo"
        android:layout_alignLeft="@+id/textViewTitulo"
        android:layout_alignStart="@+id/textViewTitulo"

        android:id="@+id/textViewResModulo" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textViewInicio"
        android:layout_alignRight="@+id/textViewResModulo"
        android:layout_alignEnd="@+id/textViewResModulo"
        android:layout_marginRight="-55dp"
        android:id="@+id/textViewResInicio" />

    <TextView
        android:text="@string/horario_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewInicio"
        android:layout_alignLeft="@+id/textViewInicio"
        android:layout_alignStart="@+id/textViewInicio"
        android:layout_marginTop="70dp"
        android:id="@+id/textViewFin"
        android:textSize="18sp" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewResFin"
        android:layout_alignBaseline="@+id/textViewFin"
        android:layout_alignBottom="@+id/textViewFin"
        android:layout_alignRight="@+id/textViewTitulo"
        android:layout_marginRight="20dp"
        android:layout_alignEnd="@+id/textViewTitulo" />

    <TextView
        android:text="@string/horario_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:id="@+id/textViewInicio"
        android:textSize="18sp"
        android:layout_below="@+id/textViewModulo"
        android:layout_alignLeft="@+id/textViewModulo"
        android:layout_alignStart="@+id/textViewModulo" />

    <TextView
        android:text="@string/profesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:id="@+id/textViewProfesor"
        android:textSize="18sp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_below="@+id/textViewTitulo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
